Added testcases