@@ -32,7 +32,7 @@
 		<dependency>
 			<groupId>io.github.bonigarcia</groupId>
 			<artifactId>webdrivermanager</artifactId>
-			<version>5.2.0</version>
+			<version>5.9.1</version>
 		</dependency>
 		<dependency>
 			<groupId>com.aventstack</groupId>
@@ -74,7 +74,7 @@
 				<configuration>
 					<forkCount>3</forkCount>
 					<reuseForks>true</reuseForks>
-					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+					<argLine>-Xmx1024m -XX:MaxMetaspaceSize=256m</argLine>
 					<suiteXmlFiles>
 						<suiteXmlFile>src/test/resources/testrunners/testng.xml</suiteXmlFile>
 					</suiteXmlFiles>
